# ufobal-web

./: .gitignore  Gruntfile.js  README.md  bower.json  deploy.sh  environment.yml  manage.py  package.json  pyproject.toml  requirements.txt  smtp_server.sh
data_source/: brno-asistence.csv  brno-strelci.csv  brno.xls  hala-asistence.csv  hala-strelci.csv  hala.xls  nizkov.xls
managestats/: urls.py  views.py
managestats/templates/: base.html  close_login_popup_new.html  index.html  match.html  player_detail.html  players.html  players_edit.html  teams.html  tournament.html  tournaments.html
static/: nizkov-asistence.csv  nizkov-strelci.csv  nizkov.xls
templates/: api.html  close_login_popup.html  index.html  intro.html
templates/admin/: base_site.html  change_form.html
ufobal/: settings.py  urls.py  wsgi.py
ufobal/middleware/: api_logging_middleware.py
ufobalapp/: admin.py  apps.py  models.py  urls.py  views.py  views_auth.py
ufobalapp/migrations/: 0001_initial.py  0002_auto_20151003_1746.py  0003_rename_tournament.py  0004_delete_names_ToT.py  0005_auto_20151004_1106.py  0006_auto_20151004_1108.py  0007_rename_tournament.py  0008_auto_20151109_1242.py  0009_auto_20151124_2204.py  0010_auto_20151129_2249.py  0011_team_tournament_ranking.py  0012_auto_20160207_2004.py  0013_tournament_registration_to.py  0014_teamontournament_default_goalie.py  0015_auto_20160218_1904.py  0016_tournament_halftime_length.py  0017_auto_20160220_1520.py  0018_shot_team.py  0019_auto_20160221_1525.py  0020_match_place.py  0021_player_pairing_token.py  0022_merge.py  0026_log.py  (+17 more)
(+63 files in other folders)
