[tool.poetry]
name = "ufobal-web"
version = "0.1.0"
description = "Ufobal IS for gathering, processing and presenting data from tournaments."
authors = [" Jiří Thran Řihák <exthran@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.1"
dj-database-url = "^2.0.0"
django-angular = "^2.3"
django-jsonfield = "^1.4.1"
qrcode = "^7.4.2"
django-debug-toolbar = "^4.1.0"
mysqlclient = "^2.1.1"
raven = "^6.10.0"
pymemcache = "^4.0.0"
social-auth-app-django = "^5.2.0"
Pillow = "^9.5.0"
django-silk = "^5.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "ufobal.settings"
addopts = "-ra"
testpaths = ['.']

[tool.black]
line-length = 120
skip-string-normalization = true
